--- a/index.html
+++ b/index.html
@@ -15,22 +15,29 @@
   </style>
 </head>
 <body>
-
-  Perfume
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+  <div>
+    <div>
+      <img src="images/image-product-desktop.jpg" alt="image of chanel perfume">
+    </div>
+    <div>
+      Perfume
+      <h2>Gabrielle Essence Eau De Parfum</h2>
+      <p>
+        A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.
+      </p>
+      <p>
+        $149.99
+        $169.99
+      </p>
+      <button>Add to Cart</button>
+    </div>
+  </div>
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Jeevan V Jijo</a>.
   </div>
 </body>
 </html>
