added styles;aligned, centered and organized the div

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   </style>
 </head>
 <body>
-  <div>
-    <div>
+  <div class="main_div">
+    <div id="leftcolumn">
       <img src="images/image-product-desktop.jpg" alt="image of chanel perfume">
     </div>
-    <div>
+    <div id="rightcolumn">
       Perfume
       <h2>Gabrielle Essence Eau De Parfum</h2>
       <p>
