change: max-width in @media, font-size and line spacing

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <div id="rightcolumn">
       <p class="Montserrat" id="perfume">PERFUME</p>
-      <h2 class="Fraunces">Gabrielle Essence Eau De Parfum</h2>
-      <p class="Montserrat" >
+      <h2 class="Fraunces" id="heading">Gabrielle Essence Eau De Parfum</h2>
+      <p class="Montserrat" id="description">
         A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.
       </p>
