commented on the picture tag in index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
   <div class="main_div">
     <div id="leftcolumn">
+      <!-- to offer different different image output in often different screen sizes. gives flexibility -->
       <picture>
         <source media="(min-width: 511px)" srcset="images/image-product-desktop.jpg">
         <img src="images/image-product-mobile.jpg" alt="image of chanel">
